fixed hide layer overlapping with editor bug

--- a/style.less
+++ b/style.less
@@ -58,7 +58,7 @@ body {
     height: 85px;
   }
   .map {
-    height: 90%;
+    height: 100%;
   }
 }
 
